# QtProjectTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  appveyor.yml  main.cpp
SourceTemplate/Aggregate/: MainWindow.cpp  MainWindow.h
SourceTemplate/AggregateAsPointer/: MainWindow.cpp  MainWindow.h
SourceTemplate/MultipleInheritance/: MainWindow.cpp  MainWindow.h
cmake/: Doxygen.cmake  DoxygenScript.cmake  GenerateGitCommitHashSource.cmake
cmake/templates/: GitCommitHash.c.in  GitCommitHash.hpp.in  GitCommitHashC.h.in  GitCommitHashCxx.h.in
